# payment-processor

./: .gitignore  Cargo.toml  Readme.md  generate_transactions.py
.github/workflows/: ci.yml
assets/: transactions.csv
src/: client_repo.rs  main.rs  models.rs  output.rs  processor.rs  producers.rs  repo.rs  transaction_repo.rs
