[package]
name = "payment-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.41"
tokio = {version = "1.42.0", features = ["full"]}
tokio-stream = "0.1.17"
tracing-subscriber = "0.3.19"
csv = "1.3.1"
anyhow = "1.0.95"
serde = { version = "1.0.216", features = ["derive"] }
tokio-util = { version = "0.7.13", features = ["rt"] }
thiserror = "2.0.9"
mockall = "0.13.1"
